--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/postcss": "^4.0.6",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.10",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.31",
     "prettier": "^3.5.1",
+    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
   }
 }
