--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "3001:3001"
     env_file:
-      - ./backend/.env
+      - ./backend/.env.docker
     depends_on:
       - mongo
     volumes:
